Add content management scripts and enhance course management features
- Introduced new database migration and seeding scripts for content management.
- Updated package.json with new scripts for content management operations.
- Enhanced CourseCard and CourseModal components to support additional thumbnail URL handling.
- Improved image upload validation and error handling in CourseModal and edit course pages.
- Updated README with new course thumbnail specifications.
- Refactored admin dashboard to dynamically display statistics based on user roles.
- Enhanced error handling for token expiration and login failures in auth middleware and services.
- Updated database migration scripts to include new roles and content management menus.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "db:create-admin": "bun run scripts/create-admin.ts",
     "db:create-owner": "bun run scripts/create-owner.ts",
     "db:create-admin-center": "bun run scripts/create-admin-center.ts",
+    "db:migrate-content-management": "bun run scripts/migrate-content-management.ts",
+    "db:seed-content-management": "bun run scripts/seed-content-management.ts",
+    "migrate:file-structure": "bun run scripts/migrate-file-structure.ts",
+    "db:verify-admin-menus": "bun run scripts/verify-admin-menus.ts",
     "db:migrate-system-settings": "bun run scripts/migrate-system-settings.ts",
     "db:migrate-payment-methods": "bun run scripts/migrate-payment-methods.ts",
     "db:update-menus-admin": "bun run scripts/update-menus-for-admin-role.ts",
