--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "db:migrate-content-management": "bun run scripts/migrate-content-management.ts",
     "db:seed-content-management": "bun run scripts/seed-content-management.ts",
     "migrate:file-structure": "bun run scripts/migrate-file-structure.ts",
+    "db:migrate-chat-system": "bun run scripts/migrate-chat-system.ts",
     "db:verify-admin-menus": "bun run scripts/verify-admin-menus.ts",
     "db:migrate-system-settings": "bun run scripts/migrate-system-settings.ts",
     "db:migrate-payment-methods": "bun run scripts/migrate-payment-methods.ts",
@@ -57,9 +58,13 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^2.0.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "nuxt": "^4.2.2",
+    "socket.io": "^4.7.0",
+    "socket.io-client": "^4.7.0",
+    "@socket.io/redis-adapter": "^8.2.1",
     "pinia": "^2.1.7",
     "vue": "latest",
     "vue-router": "latest",
