--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "db:seed-content-management": "bun run scripts/seed-content-management.ts",
     "migrate:file-structure": "bun run scripts/migrate-file-structure.ts",
     "db:migrate-chat-system": "bun run scripts/migrate-chat-system.ts",
+    "db:migrate-chat-tags-notes": "bun run scripts/migrate-chat-tags-notes.ts",
+    "db:migrate-chat-reply-pin": "bun run scripts/migrate-chat-reply-pin.ts",
     "db:verify-admin-menus": "bun run scripts/verify-admin-menus.ts",
     "db:migrate-system-settings": "bun run scripts/migrate-system-settings.ts",
     "db:migrate-payment-methods": "bun run scripts/migrate-payment-methods.ts",
@@ -58,11 +60,14 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^2.0.0",
+    "engine.io": "^6.6.4",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "nuxt": "^4.2.2",
     "pinia": "^2.1.7",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "vue": "latest",
     "vue-router": "latest",
     "zod": "^3.23.8"
