--- a/package.json
+++ b/package.json
@@ -80,5 +80,9 @@
     "fs-extra": "^11.3.3",
     "typescript": "^5.5.4"
   },
-  "packageManager": "bun@1.3.1"
+  "packageManager": "bun@1.3.1",
+  "engines": {
+    "node": "20.19.4",
+    "npm": ">=10.0.0"
+  }
 }
