--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -4,6 +4,19 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "@ioredis/commands": "1.4.0",
+    "cluster-key-slot": "1.1.2",
+    "debug": "4.4.3",
+    "denque": "2.1.0",
+    "has-flag": "4.0.0",
+    "ioredis": "5.8.2",
+    "lodash.defaults": "4.2.0",
+    "lodash.isarguments": "3.1.0",
+    "ms": "2.1.3",
+    "redis-errors": "1.2.0",
+    "redis-parser": "3.0.0",
+    "standard-as-callback": "2.1.0",
+    "supports-color": "7.2.0",
     "xmlhttprequest-ssl": "2.1.2"
   }
 }
